--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+spring.data.mongodb.uri=mongodb+srv://axlopez:UKecZuLG8C8AhHVD@proyecto3.wehld.mongodb.net/?retryWrites=true&w=majority&appName=Proyecto3
+spring.data.mongodb.database=Proyecto3
 spring.application.name=SuperAndesNoSQL
